crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_tuple_style_ast.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: ast
---
#[derive(Clone, Debug, PartialEq)]
pub struct ReturnAST<'tokens, 'src, Language>(
    pub  ::kirin::parsers::SSAValue<
        'src,
        <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    >,
    ::core::marker::PhantomData<fn() -> (&'tokens (), &'src (), Language)>,
)
where
    Language: ::kirin::ir::Dialect;
