crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_tuple_style_parser.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: parser
---
impl<'tokens, 'src: 'tokens> ::kirin_chumsky::HasDialectParser<'tokens, 'src, Return> for Return {
    type Output = ReturnAST<'tokens, 'src, Return>;
    type TypeAST = <SimpleType as ::kirin_chumsky::HasParser<'tokens, 'src>>::Output;
    #[inline]
    fn recursive_parser<I>(
        language: ::kirin_chumsky::RecursiveParser<'tokens, 'src, I, Self::Output>,
    ) -> ::kirin_chumsky::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin_chumsky::TokenInput<'tokens, 'src>,
        Return: ::kirin_chumsky::HasDialectParser<'tokens, 'src, Return>,
    {
        use chumsky::prelude::*;
        let parser: ::kirin_chumsky::BoxedParser<
            'tokens,
            'src,
            I,
            ReturnAST<'tokens, 'src, Return>,
        > = {
            use kirin_lexer::Token;
            ::chumsky::prelude::just(Token::Identifier("return"))
                .ignore_then(::kirin_chumsky::ssa_value::<_, Return, SimpleType>())
                .map(|field_0| -> ReturnAST<'tokens, 'src, Return> {
                    ReturnAST(field_0, ::core::marker::PhantomData)
                })
        }
        .boxed();
        unsafe { ::core::mem::transmute(parser) }
    }
}
impl<'tokens, 'src: 'tokens> ::kirin_chumsky::HasParser<'tokens, 'src> for Return
where
    SimpleType: ::kirin_chumsky::HasParser<'tokens, 'src, Output = SimpleType>,
{
    type Output = ReturnAST<'tokens, 'src, Return>;
    fn parser<I>() -> ::kirin_chumsky::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin_chumsky::TokenInput<'tokens, 'src>,
    {
        use chumsky::prelude::*;
        ::chumsky::recursive::recursive(|language| {
            <Return as ::kirin_chumsky::HasDialectParser<'tokens, 'src, Return>>::recursive_parser(
                language,
            )
        })
        .boxed()
    }
}
