crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_tuple_style_pretty.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: pretty
---
impl ::kirin::pretty::PrettyPrint for Return {
    fn pretty_print<'a, __L: ::kirin::ir::Dialect + ::kirin::pretty::PrettyPrint>(
        &self,
        doc: &'a ::kirin::pretty::Document<'a, __L>,
    ) -> ::kirin::pretty::ArenaDoc<'a>
    where
        __L::Type: ::core::fmt::Display,
    {
        use kirin::pretty::DocAllocator;
        let Return(f0) = self;
        doc.text("return ") + ::kirin::pretty::PrettyPrint::pretty_print(f0, doc)
    }
}
