crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_with_block_ast.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: ast
---
#[derive(Clone, Debug, PartialEq)]
pub struct BranchAST<'tokens, 'src: 'tokens, Language: ::kirin::ir::Dialect>
where
    Language: ::kirin::ir::Dialect,
{
    pub target: ::kirin::parsers::BlockLabel<'src>,
    #[doc(hidden)]
    _marker: ::core::marker::PhantomData<fn() -> (&'tokens (), &'src (), Language)>,
}
