crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_with_block_parser.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: parser
---
#[automatically_derived]
impl<'tokens, 'src: 'tokens> ::kirin::parsers::HasDialectParser<'tokens, 'src> for Branch
where
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
{
    type Output<__TypeOutput, __LanguageOutput>
        = BranchAST<'tokens, 'src, __TypeOutput, __LanguageOutput>
    where
        __TypeOutput: Clone + PartialEq + 'tokens,
        __LanguageOutput: Clone + PartialEq + 'tokens;
    #[inline]
    fn recursive_parser<I, __TypeOutput, __LanguageOutput>(
        language: ::kirin::parsers::RecursiveParser<'tokens, 'src, I, __LanguageOutput>,
    ) -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output<__TypeOutput, __LanguageOutput>>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
        __TypeOutput: Clone + PartialEq + 'tokens,
        __LanguageOutput: Clone + PartialEq + 'tokens,
    {
        use kirin::parsers::chumsky::prelude::*;
        {
            use kirin::parsers::Token;
            ::kirin::parsers::chumsky::prelude::just(Token::Identifier("br"))
                .ignore_then(::kirin::parsers::block_label())
                .map(
                    |target| -> BranchAST<'tokens, 'src, __TypeOutput, __LanguageOutput> {
                        BranchAST {
                            target: target,
                            _marker: ::core::marker::PhantomData::<
                                fn() -> (&'tokens (), &'src (), __TypeOutput, __LanguageOutput),
                            >,
                        }
                    },
                )
        }
        .boxed()
    }
}
#[automatically_derived]
impl<'tokens, 'src: 'tokens> ::kirin::parsers::HasParser<'tokens, 'src> for Branch
where
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
{
    type Output = BranchASTSelf<
        'tokens,
        'src,
        <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    >;
    fn parser<I>() -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
    {
        use kirin::parsers::chumsky::prelude::*;
        ::kirin::parsers::chumsky::recursive::recursive(|language| {
            <Branch as ::kirin::parsers::HasDialectParser<'tokens, 'src>>::recursive_parser::<
                I,
                <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
                Self::Output,
            >(language)
            .map(|inner| BranchASTSelf::new(inner))
        })
        .boxed()
    }
}
