crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_with_comptime_ast.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: ast
---
#[derive(Clone, Debug, PartialEq)]
pub struct ConstantAST<'tokens, 'src: 'tokens, TypeOutput, LanguageOutput>
where
    TypeOutput: Clone + PartialEq + 'tokens,
    LanguageOutput: Clone + PartialEq + 'tokens,
{
    pub value: <Value as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    pub res: ::kirin::parsers::ResultValue<
        'src,
        <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    >,
    #[doc(hidden)]
    _marker:
        ::core::marker::PhantomData<fn() -> (&'tokens (), &'src (), TypeOutput, LanguageOutput)>,
}
#[doc = r" Self-referential wrapper for standalone use."]
#[doc = r""]
#[doc = r" This type sets `LanguageOutput = Self`, creating a self-referential"]
#[doc = r" AST type suitable for use with `HasParser`."]
#[derive(Clone, Debug, PartialEq)]
pub struct ConstantASTSelf<'tokens, 'src: 'tokens, TypeOutput>(
    pub ConstantAST<'tokens, 'src, TypeOutput, ConstantASTSelf<'tokens, 'src, TypeOutput>>,
    ::core::marker::PhantomData<fn() -> (&'tokens (), &'src (), TypeOutput)>,
)
where
    TypeOutput: Clone + PartialEq,
    'src: 'tokens;
impl<'tokens, 'src, TypeOutput> ConstantASTSelf<'tokens, 'src, TypeOutput>
where
    TypeOutput: Clone + PartialEq,
    'src: 'tokens,
{
    #[doc = r" Creates a new ASTSelf wrapper."]
    pub fn new(
        inner: ConstantAST<'tokens, 'src, TypeOutput, ConstantASTSelf<'tokens, 'src, TypeOutput>>,
    ) -> Self {
        Self(inner, ::core::marker::PhantomData)
    }
}
