crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_with_comptime_pretty.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: pretty
---
#[automatically_derived]
impl ::kirin::pretty::PrettyPrint for Constant {
    fn pretty_print<'a, __L: ::kirin::ir::Dialect + ::kirin::pretty::PrettyPrint>(
        &self,
        doc: &'a ::kirin::pretty::Document<'a, __L>,
    ) -> ::kirin::pretty::ArenaDoc<'a>
    where
        __L::Type: ::core::fmt::Display,
    {
        use kirin::pretty::DocAllocator;
        let Constant {
            value: f_value,
            res: f_res,
        } = self;
        ::kirin::pretty::PrettyPrint::pretty_print_name(f_res, doc)
            + doc.text(" = constant ")
            + ::kirin::pretty::PrettyPrint::pretty_print(f_value, doc)
            + doc.text(" -> ")
            + ::kirin::pretty::PrettyPrint::pretty_print_type(f_res, doc)
    }
}
